# catchball

./: .gitignore  README.md  REVIEWER.md  WORKER.md  catchball.py  example-task.md  pyproject.toml  run.sh
.samples/playground/js-click-game/: game.js
legacy/: catchball  self-check.sh
tasks/: 010-example-create-demo-note.md
tests/: test_catchball.py
