[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "catchball"
version = "0.1.0"
description = "Cross-platform catchball runner"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "psutil>=5.9.8",
]

[project.scripts]
catchball = "catchball:main"

[tool.setuptools]
py-modules = ["catchball"]